--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" class="dark">
 <head>
@@ -14,6 +13,8 @@
             font-family: 'Inter', sans-serif;
             background-color: #0a0a0a;
             color: #ededed;
+            margin: 0;
+            padding: 0;
         }
         ::-webkit-scrollbar {
             width: 8px;
@@ -43,5 +44,7 @@
 </head>
 <body>
     <div id="root"></div>
+    <!-- CRITICAL: Added the module entry point below -->
+    <script type="module" src="index.tsx"></script>
 </body>
 </html>
